# monkey-lang

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  README.md  knope.toml
.cargo/: config.toml
.changeset/: create_basic_repl_to_generate_tokens.md  created_a_parser_that_can_parse_let_return_and_expression_statments.md  created_a_simple_lexer_that_can_tokenize_.md  extended_the_lexer_to_tokenize_.md  extended_the_lexer_to_tokenize_fn.md  extended_the_lexer_to_tokenize_if_else_return_true_false.md  extended_the_lexer_to_tokenize_let_statements_and_integers.md  extended_the_lexer_to_tokenize_opeartors.md  implemented_prefix_and_infix_pratt_parsing_for_integers_and_identfiers_for_now.md
.github/: pull_request_template.md
.github/workflows/: integration.yml  labeler.yml  prepare_release.yml  release.yml
src/: ast.rs  builtins.rs  environment.rs  error.rs  eval.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs  utils.rs
src/ast/: expression.rs  lexer.rs  mod.rs  operator.rs  parser.rs  program.rs  spanned.rs  statement.rs  token.rs
src/builtins/: error.rs  functions.rs  mod.rs
src/datatype/: array.rs  boolean.rs  function.rs  integer.rs  mod.rs  object.rs  string.rs
src/evaluator/: datatype.rs  error.rs  mod.rs
src/ir/: function.rs  mod.rs  program.rs
src/lexer/: cursor.rs  error.rs  mod.rs  quantifiers.rs  rules.rs  span.rs  token.rs  tokens.rs  utils.rs
src/parser/: ast.rs  error.rs  expression.rs  mod.rs  quantifiers.rs  rule.rs  statement.rs
src/runtime/: environment.rs  mod.rs
(+25 files in other folders)
