[package]
name = "monkey-lang"
version = "0.0.17"
edition = "2024"

[dependencies]
chumsky = { version = "=0.11.2" } 
ariadne = { version = "=0.6.0" }
internment = { version = "=0.8.6"} 
thiserror = { version = "=2.0.17" }

[profile.dev]
# debug disabled due to an issue related to PDB generation in edition 2024 for complex types.
debug = 0